styles/main.css
/* FONTS */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=swap');
@font-face {
    font-family: "London-Underground";
    src: url("../media/london-underground-regular.ttf");
}


/* DEFAULT ELEMENTS */

body {
    background-color: #191919;
    line-height: 1.65rem;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-content: center;
    overflow-y: auto;
}

main {
    margin: calc(50vh - 3.25rem) 29vw 20vh;

    transition: all 0.75s;
    transform: translateX(8px);
}

::selection {background: #3d3d3d;}

h1 {
    font-family: "London-Underground", "serif";
    font-size: 1rem;
    letter-spacing: normal;

    color: #2F2F2F;
}

h2 {
    font-family: "Inter", "sans-serif";
    font-weight: 600;
    font-size: 1rem;
}

h3 {
    font-family: "Inter", "sans-serif";
    font-weight: 400;
    font-size: 1rem;
    color: #999999;
}

a {
    color: #999999;
    text-decoration: none;
}

p {
    font-family: "Inter", "sans-serif";
    font-weight: 400;
    font-size: 1rem;
    color: #e3e3e3;
}

.section {
    display: block;
    overflow: hidden;

    padding-top: 148px;
}

/* SCROLLBAR */
/* 1. Standard property for Firefox */
html {
    scrollbar-width: thin;
    scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
}

/* 2. Webkit (Chrome/Safari/Edge) styling */
::-webkit-scrollbar {
    width: 8px; /* Thinner width */
}

::-webkit-scrollbar-track {
    background: transparent; /* Makes the track invisible */
}

::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.2); /* Subtle scrollbar color */
    border-radius: 10px;
    border: 2px solid transparent; /* Creates padding effect */
    background-clip: content-box;
}

/* 3. The "Auto-Hide" Effect */
/* Note: True "auto-hide" is a browser-level setting,
   but we can make it fade in only when you hover over the page */
::-webkit-scrollbar-thumb {
    background-color: transparent;
}

html:hover ::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.2);
}

/* NAVBAR */

.header {
    display: flex;
    position: fixed;
    top: 0;
    left: 16px;
    padding-top: 16px;
    padding-bottom: 8px;
    width: calc(100vw - 32px);
    height: 40px;
    z-index: 100;

    background-image: linear-gradient(to bottom, rgba(25, 25, 25, 1), rgba(25, 25, 25, 0));
}

.logo {
    width: 32px;
    height: 32px;
}

@keyframes instant-snap {
    /* Snap to 45 degrees the millisecond the hover starts */
    0%, 99.9% {
        transform: rotate(45deg);
    }
    /* Snap to 90 degrees after the 0.3s duration is complete */
    100% {
        transform: rotate(90deg);
    }
}

.logo-link {
    padding: 4px;
    transform: rotate(0deg);
    transform-origin: 20px 20px 20px;
    /* KEYFRAME ME TWIN */

}

.logo-link:hover {
    animation: instant-snap 0.2s steps(1) forwards;
}

.navbar-space {
    width: 100%;
}

.hire-button {
    color: #e3e3e3;
    font-weight: 400;
    padding: 0;
    line-height: 1;
}

.hire-holder {
    display: flex;
    background: #1e1e1e;
    border: 1px #2c2c2c solid;
    border-radius: 8px;
    margin: 0;
    padding: 0 16px;
    justify-content: center;
    align-items: center;
}

.hire-holder:hover {
    cursor: pointer;
}


/* HERO SECTION */

.hero-holder {
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
    gap: 0.5rem;

    margin-bottom: 50vh;
}

.hero-title {
    padding: 0;
    margin:0;
    font-size: 5rem;
    line-height: 5rem;
    font-weight: 400;
    letter-spacing: -0.5rem;

    text-align: left;
    color: #e3e3e3;
}


/* EXPERIENCE SECTION */

.timeline-holder {
    display: flex;
    justify-content: center;
    gap: 4rem;

    margin-left: auto;
    margin-right: auto;
}

.line {
    width: 1px;
    height: 200px;
    background-color: #2F2F2F;

    margin-left: auto;
    margin-right: auto;
}

.timeline-dot {
    width: 5px;
    height: 5px;
    background-color: #2F2F2F;
    border-radius: 50%;

    margin: 12px auto;
}

.timeline-block {
    width: 12rem;
}

.timeline-text {
    height: 230px;
}

.timeline-text:hover .card-description{
    color: #e3e3e3;
}

.timeline-space {height: 230px;}


/* PROJECTS SECTION */

#projects {
    display: flex;
    flex-direction: column;
    align-content: center;

}

.card-holder {
    display: flex;
    flex-wrap: nowrap;
    gap: 32px;
    overflow-x: auto;
    scrollbar-width: none;
}

.row {
    display: flex;
    flex-direction: column;
    gap: 12px;
    width: calc((42vw - 40px) / 3); /* 100vw - margins - gaps / 3 */
    min-width: 175px;
}

.card {
    height: 200px;
}

.card:hover .card-description {
    color: #e3e3e3;
}

.card-title {
    margin-top: 0;
    color: #e3e3e3;
    font-weight: 500;
    padding-bottom: 0.25rem;
}

.card-description {
    font-weight: 400;
    color: #999999;
}


/* ABOUT SECTION */

.link-holder {
    display: flex;
    gap: 3rem;

    margin-top: 2rem;
}

.social-link p {
    color: #999999;
}

.social-link:hover p {color: #e3e3e3;}


/* Laptop */
@media (max-width: 1300px) {
    main {
        margin-left: 20vw;
        margin-right: 20vw;
    }

    .row {width: calc((60vw - 40px) / 3);}

    .link-holder {gap: 3vw;}

    #name {width: 30vw;}

    #name:hover {width: 30vw;}
}


/* Mobile */
@media (max-width: 800px) and (orientation: portrait) {
    main {
        margin: calc(50vh - 7rem) 7vw 10vh;
        transform: translateX(0);
    }

    .section {padding-top: 100px;}

    .timeline-holder {gap: 2rem;}

    .row {width: calc((86vw - 40px) / 3);}

    .section-head {letter-spacing: 5vw;}

    .link-holder {
        gap: 2rem;
    }



    main.after #name .hero-title {line-height: 2rem;}

    .hero-title {
        font-size: 4rem;
        letter-spacing: -0.3rem;
    }

    #github-link {display: none;}
}

